FCREPO-1110: Use Cargo Maven plugin to start/stop Fedora for fedora-client integration tests
Uses a combination of install.properties (fedora-client-core/src/test/resources) and pom-defined properties to start/stop Tomcat.

This is currently abusing some classes derived from fcrepo-installer, but until someone has time to revisit/refactor, this will have to do.

https://jira.duraspace.org/browse/FCREPO-1110