@@ -12,6 +12,11 @@
   <url>http://mediashelf.github.com/${project.artifactId}</url>
   <properties>
     <jersey.version>1.13</jersey.version>
+    <fcrepo.version>3.6.1-SNAPSHOT</fcrepo.version>
+    <fedora.home>${project.build.directory}/fedora-home</fedora.home>
+    <fedora.port>9090</fedora.port>
+    <javax.net.ssl.trustStore>${fedora.home}/server/truststore</javax.net.ssl.trustStore>
+    <javax.net.ssl.trustStorePassword>tomcat</javax.net.ssl.trustStorePassword>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -105,6 +110,36 @@
         <version>1.3</version>
         <scope>test</scope>
       </dependency>
+      <!-- Test dependencies for running Fedora w/ Cargo -->
+      <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.1</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.fcrepo</groupId>
+        <artifactId>fcrepo-installer</artifactId>
+        <version>${fcrepo.version}</version>
+        <classifier>fedora-home</classifier>
+        <type>zip</type>
+        <scope>test</scope>
+        <exclusions>
+          <!-- wildcard exclusions shouldn't work and produce a WARNING, but in fact, 
+            they work at least as of Maven 3.0.3. Also see http://jira.codehaus.org/browse/MNG-3832 -->
+          <exclusion>
+            <groupId>*</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.fcrepo</groupId>
+        <artifactId>fcrepo-webapp-fedora</artifactId>
+        <version>${fcrepo.version}</version>
+        <type>war</type>
+        <scope>test</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <dependencies>
@@ -165,6 +200,15 @@
       <artifactId>xmlunit</artifactId>
     </dependency>
     <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.fcrepo</groupId>
+      <artifactId>fcrepo-webapp-fedora</artifactId>
+      <type>war</type>
+    </dependency>
+    <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-artifact</artifactId>
       <version>3.0.3</version>
@@ -172,18 +216,60 @@
     </dependency>
   </dependencies>
   <build>
+    <testResources>
+      <testResource>
+        <directory>src/test/resources</directory>
+        <filtering>true</filtering>
+        <includes>
+          <include>**/*.properties</include>
+        </includes>
+      </testResource>
+      <testResource>
+        <directory>src/test/resources</directory>
+        <filtering>false</filtering>
+        <excludes>
+          <exclude>**/*.properties</exclude>
+        </excludes>
+      </testResource>
+    </testResources>
     <plugins>
+      <plugin>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>unpack</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>unpack</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>org.fcrepo</groupId>
+                  <artifactId>fcrepo-installer</artifactId>
+                  <classifier>fedora-home</classifier>
+                  <type>zip</type>
+                  <overWrite>false</overWrite>
+                  <outputDirectory>${fedora.home}</outputDirectory>
+                </artifactItem>
+              </artifactItems>
+              <overWriteReleases>false</overWriteReleases>
+              <overWriteSnapshots>true</overWriteSnapshots>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
         <configuration>
           <systemPropertyVariables>
             <test.debug>false</test.debug>
             <test.validate>false</test.validate>
-            <fedora.test.baseUrl>http://localhost:8080/fedora</fedora.test.baseUrl>
+            <fedora.test.baseUrl>http://localhost:${fedora.port}/fedora</fedora.test.baseUrl>
             <fedora.test.username>fedoraAdmin</fedora.test.username>
             <fedora.test.password>fedoraAdmin</fedora.test.password>
-            <javax.net.ssl.trustStore>/opt/fedora/current/server/truststore</javax.net.ssl.trustStore>
-            <javax.net.ssl.trustStorePassword>tomcat</javax.net.ssl.trustStorePassword>
+            <javax.net.ssl.trustStore>${javax.net.ssl.trustStore}</javax.net.ssl.trustStore>
+            <javax.net.ssl.trustStorePassword>${javax.net.ssl.trustStorePassword}</javax.net.ssl.trustStorePassword>
             <org.apache.activemq.default.directory.prefix>${project.build.directory}/</org.apache.activemq.default.directory.prefix>
           </systemPropertyVariables>
         </configuration>
@@ -262,6 +348,7 @@
       <plugin>
         <artifactId>maven-enforcer-plugin</artifactId>
       </plugin>
+      <!-- For benchmarking Batch methods
       <plugin>
         <groupId>com.edugility</groupId>
         <artifactId>h2-maven-plugin</artifactId>
@@ -269,12 +356,91 @@
         <executions>
           <execution>
             <id>Spawn a new H2 TCP server</id>
+            <phase>pre-integration-test</phase>
             <goals>
               <goal>spawn</goal>
             </goals>
           </execution>
           <execution>
             <id>Stop a spawned H2 TCP server</id>
+            <phase>post-integration-test</phase>
+            <goals>
+              <goal>stop</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <classpathScope>test</classpathScope>
+          <executable>java</executable>
+          <arguments>
+            <argument>-classpath</argument>
+            <classpath/>
+            <argument>com.yourmediashelf.fedora.cargo.FedoraHome</argument>
+            <argument>${project.build.testOutputDirectory}/install.properties</argument>
+          </arguments>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.cargo</groupId>
+        <artifactId>cargo-maven2-plugin</artifactId>
+        <configuration>
+          <container>
+            <containerId>tomcat7x</containerId>
+            <zipUrlInstaller>
+              <url>https://archive.apache.org/dist/tomcat/tomcat-7/v7.0.29/bin/apache-tomcat-7.0.29.zip</url>
+            </zipUrlInstaller>
+            <log>${project.build.directory}/container.log</log>
+            <systemProperties>
+              <fedora.home>${fedora.home}</fedora.home>
+              <javax.net.ssl.trustStore>${javax.net.ssl.trustStore}</javax.net.ssl.trustStore>
+              <javax.net.ssl.trustStorePassword>${javax.net.ssl.trustStorePassword}</javax.net.ssl.trustStorePassword>
+            </systemProperties>
+          </container>
+          <deployables>
+            <deployable>
+              <artifactId>fcrepo-webapp-fedora</artifactId>
+              <groupId>org.fcrepo</groupId>
+              <type>war</type>
+              <properties>
+                <!-- put our test deployment in URL tree -->
+                <context>fedora</context>
+              </properties>
+            </deployable>
+          </deployables>
+          <configuration>
+            <properties>
+              <cargo.servlet.uriencoding>UTF-8</cargo.servlet.uriencoding>
+              <cargo.servlet.port>${fedora.port}</cargo.servlet.port>
+              <cargo.jvmargs>-XX:MaxPermSize=256M -Xmx512M</cargo.jvmargs>
+            </properties>
+          </configuration>
+        </configuration>
+        <executions>
+          <!-- starting container prior to integration tests -->
+          <execution>
+            <id>start-container</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>start</goal>
+            </goals>
+          </execution>
+          <!-- stopping container after integration tests -->
+          <execution>
+            <id>stop-container</id>
+            <phase>post-integration-test</phase>
             <goals>
               <goal>stop</goal>
             </goals>
